# scanphone

./: README.md
C++/: CMakeLists.txt  generateur.cpp  main.cpp  utilities.h
C++/codebarre/: codebarre.cpp  codebarre.h
C++/detection_codebarre/: CMakeLists.txt  DetectionCodeBarres.cpp  Image.cpp  Image.h
C++/gradient/: gradient.cpp  gradient.h
C++/machine_learning/: CMakeLists.txt  Neurone.cpp  Neurone.h  codebarre.cpp  codebarre.h  double5_quick0.txt  main.cpp
C++/machine_learning/reseau/: double5_quick1.txt
matlab/: compute_gradient.m  compute_gradient_tych.m  demo_deblur_TV.m  demo_deblur_TV.m~  demo_deblur_Tych.m
